--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
     
-      <h1>Hey There,</h1>
-      <p>... <span class="typed" data-typed-items="Lets Know More About Me ...,Home/About/Resume/Blog/Musings/Contact"></span></p>
+      <h1></h1>
+      <p>... <span class="typed" data-typed-items="Its nice to have you here,Just dive right in.."></span></p>
      
 	</br>
 	</br>
