--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 	 <div class="social-links" >
 	
   	
-	   <a href="#hero" ><i class="bx bx-home"></i> <span></span></a>
-           &nbsp;&nbsp;&nbsp;<a href="#about" ><i class="bx bx-user"></i> <span></span></a>
-	   &nbsp;&nbsp;&nbsp;<a href="#resume" ><i class="bx bx-file-blank"></i> <span></span></a>
-    	   &nbsp;&nbsp;&nbsp;<a href="#blog"><i class="bx bxl-blogger"></i> <span></span></a>
-	   &nbsp;&nbsp;&nbsp;<a href="#musings"><i class="bx bx-heart-circle"></i> <span></span></a>
-	   &nbsp;&nbsp;&nbsp;<a href="#contact" ><i class="bx bx-envelope"></i> <span></span></a>
+	   <a href="https://anergha.github.io/" ><i class="bx bx-home"></i> <span></span></a>
+           &nbsp;&nbsp;&nbsp;<a href="https://anergha.github.io/AboutMe/" ><i class="bx bx-user"></i> <span></span></a>
+	   &nbsp;&nbsp;&nbsp;<a href="https://anergha.github.io/Resume/" ><i class="bx bx-file-blank"></i> <span></span></a>
+    	   &nbsp;&nbsp;&nbsp;<a href="https://anergha.github.io/MyBlog"><i class="bx bxl-blogger"></i> <span></span></a>
+	   &nbsp;&nbsp;&nbsp;<a href="https://anergha.github.io/MyMusings/"><i class="bx bx-heart-circle"></i> <span></span></a>
+	   &nbsp;&nbsp;&nbsp;<a href="https://anergha.github.io/Contact" ><i class="bx bx-envelope"></i> <span></span></a>
 	   &nbsp;&nbsp;&nbsp;
   
 	</div>
