--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 	   <a href="https://anergha.github.io/" ><i class="bx bx-home"></i> <span></span></a>
            &nbsp;&nbsp;&nbsp;<a href="https://anergha.github.io/AboutMe/" ><i class="bx bx-user"></i> <span></span></a>
 	   &nbsp;&nbsp;&nbsp;<a href="https://anergha.github.io/Resume/" ><i class="bx bx-file-blank"></i> <span></span></a>
-    	   &nbsp;&nbsp;&nbsp;<a href="https://anergha.github.io/MyBlog"><i class="bx bxl-blogger"></i> <span></span></a>
+    	   &nbsp;&nbsp;&nbsp;<a href="https://medium.com/@anerghaa"><i class="bx bxl-blogger"></i> <span></span></a>
 	   &nbsp;&nbsp;&nbsp;<a href="https://anergha.github.io/MyMusings/"><i class="bx bx-heart-circle"></i> <span></span></a>
-	   &nbsp;&nbsp;&nbsp;<a href="https://anergha.github.io/Contact" ><i class="bx bx-envelope"></i> <span></span></a>
+	   &nbsp;&nbsp;&nbsp;<a href="mailto:anerghaa@gmail.com" ><i class="bx bx-envelope"></i> <span></span></a>
 	   &nbsp;&nbsp;&nbsp;
   
 	</div>
